# funcmasker-compare

./: .gitignore  1_evaluate_our_method.sh  1_evaluate_out_method.sh  1_preproc_rutherford.sh  2_inference_our_method.sh  2_run_2d_unet.sh  3_evaluate_our_method.sh  3_evaluate_their_method.sh  4.1_inference_our_method_uwodata.sh  4.2_evaluate_our_method_uwodata.sh  4_evaluate_our_method_uwodata.sh  4_inference_our_method_uwodata  4_run_2d_unet.sh  5_run_2d_unet_uwodata.sh  6_evaluate_their_method_uwodata.sh  README.md  analysis.ipynb  pyproject.toml  test_subjects.txt
funcmasker_output/: test_dice.csv  test_rutherfordunet_dice.csv
funcmasker_output_uwodata/: test_dice.csv  test_rutherfordunet_dice.csv
revision_compare/: README.md  Snakefile  analysis_revision.ipynb  config.yml
revision_compare/results/func/: desc-bet_dice-3d_metrics.csv  desc-funcmasker_dice-3d_metrics.csv  desc-funcmasker_metrics.csv  desc-rutherford_dice-3d_metrics.csv  desc-rutherford_metrics.csv
revision_compare/scripts/: calc_metrics_4d.py  calc_metrics_4d_dice2d.py
