[tool.poetry]
name = "funcmasker-compare"
version = "0.1.0"
description = "Scripts and notebooks for funcmasker-flex comparison"
authors = ["Ali Khan <alik@robarts.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
jupyterlab = "^3.4.0"
seaborn = "^0.11.2"
matplotlib = "^3.5.2"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
